--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -72,6 +72,7 @@ $white: #F6F7F9;
 
     .pool-list-item {
       display: inline-flex;
+      padding: 5px 0px;
       transition: .25s;
       padding-left: 5px;
       div:hover {
