--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -75,7 +75,7 @@
       padding-top: 10px;
       margin-bottom: 10px;
       display: flex;
-      justify-content: flex-start;
+      justify-content: space-between;
       flex: 0 0 auto;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       background: $lt-primary;
@@ -100,6 +100,7 @@
       margin-bottom: 10px;
       display: flex;
       flex-direction: row;
+      justify-content: space-between;
       flex: 0 0 auto;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
       // background: white;
@@ -120,7 +121,9 @@
         .pick-button {
           transform: scale(1.05,1.05);
         }
-        background: rgba(17, 96, 162, .2);
+        // background: rgba(17, 96, 162, .2);
+        background: white;
+        color: black;
       }
     }
 
