--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -103,19 +103,20 @@
       justify-content: space-between;
       flex: 0 0 auto;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-      // background: white;
       background: $lt-primary;
       color: white;
 
       label {
         height: 90px;
         width: 250px;
+        border-radius: 10px;
         display: flex;
         cursor: pointer;
       }
 
       label:first-child {
-        // border-right: .2px rgba(51, 51, 51,.2) solid;
+        border-top-left-radius: 0px;
+        border-bottom-left-radius: 0px; 
       }
 
       label:hover {
