--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -1,20 +1,16 @@
+@import 'pick_form.scss';
+
 .picks-container {
-  // margin: 20px auto;
-  // width: 715px;
   width: 870px;
   padding: 20px 0px;
-  // padding: 10px 20px;
-  // padding-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-weight: bold;
-  // background: #e5e5e4;
   border-radius: 2px;
 
   .picks-header {
-    // width: 685px;
     padding-left: 19px;
     width: 100%;
     font-size: 25px;
@@ -30,11 +26,9 @@
       position: absolute;
       bottom: 16px;
       left: 0px;
-      // padding-right: 10px;
     }
 
     .fa-caret-right {
-      // right: 10px;
       padding-left: 10px;
     }
 
@@ -66,176 +60,29 @@
       border: 1px black solid;
     }
   }
+  .picks-labels {
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    flex: 0 0 auto;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    background: $lt-primary;
+    color: white;
 
-  .picks-selections {
-    width: 100%;
-    
-    .picks-labels {
-      padding-bottom: 10px;
-      padding-top: 10px;
-      margin-bottom: 10px;
-      display: flex;
-      justify-content: space-between;
-      flex: 0 0 auto;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-      background: $lt-primary;
-      color: white;
-
-      div {
-        width: 95px;
-        text-align: center;
-        font-weight: bold;
-      }
-
-      div:first-child {
-        width: 250px;
-      }
-
-      div:last-child {
-        width: 250px;
-      }
-    }
-   
-    .selection-item {
-      margin-bottom: 10px;
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      flex: 0 0 auto;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-      background: $lt-primary;
-      color: white;
-
-      label {
-        height: 90px;
-        width: 250px;
-        border-radius: 10px;
-        display: flex;
-        cursor: pointer;
-      }
-
-      label:first-child {
-        border-top-left-radius: 0px;
-        border-bottom-left-radius: 0px; 
-      }
-
-      label:hover {
-        .pick-button {
-          transform: scale(1.05,1.05);
-        }
-        // background: rgba(17, 96, 162, .2);
-        background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
-        color: $drk-primary;
-        border: .5px $drk-primary solid;
-      }
+    div {
+      width: 95px;
+      text-align: center;
+      font-weight: bold;
     }
 
-      .selection-form-home-name, .selection-form-away-name {
-        height: 88px;
-        margin: 0 auto;
-        // width: 121.78px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-      }
-
-      .selection-form-spread, .selection-form-date, .selection-form-time, .selection-form-line, .selection-form-score {
-        height: 88px;
-        width: 92.5px;
-        border-right: .2px rgba(51, 51, 51,.2) solid;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-
-      .selection-form-time {
-        font-size: 17px;
-        display: flex;
-        flex-direction: column;
-
-        .time-row {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-        }
-
-        .time-props {
-          padding-left: 3px;  
-          font-size: 8px;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          div {
-            line-height: 8px;
-          }
-        }
-      }
-
-      .selection-form-line {
-        font-size: 17px;
-        flex-direction: column;
-      }
-
-      .pick-button {
-        height: 88px;
-        position: relative;
-        display: inline-block;
-        border-radius: 10px;
-        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        transition: all 0.3s ease-in-out;
-        cursor: pointer;
-      }
-
-      .pick-home-button {
-        border-top-right-radius: 0px;
-        border-bottom-right-radius: 0px;
-      }
-
-      .pick-away-button {
-        border-top-left-radius: 0px;
-        border-bottom-left-radius: 0px;
-      }
-
-      .pick-button::after {
-        content: '';
-        position: absolute;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
-        opacity: 0;
-        border-radius: 5px;
-        transition: opacity 0.3s ease-in-out;
-      }
-
-      .pick-button::after {
-        opacity: 1;
-      }
+    div:first-child {
+      width: 250px;
     }
 
-    .selected-button {
-      // background: rgba(17, 96, 162, .2);
-      background: white;
-      color: black;
-    }
-
-    .correct-pick-button {
-      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
-      color: #476C9B;
-      border: .5px $drk-primary solid;
-      border-right: none;
-      border-left: none;
-    }
-
-    .incorrect-pick-button {
-      background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
-      border: .5px $drk-primary solid;
-      color: #A71D31;
-      // color: #984447;
-      border-right: none;
-      border-left: none;
+    div:last-child {
+      width: 250px;
     }
   }
-
+}
