--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -1,7 +1,8 @@
 @import 'pick_form.scss';
 
 .picks-container {
-  width: 870px;
+  // width: 870px;
+  width: 95%;
   padding: 20px 0px;
   display: flex;
   flex-direction: column;
