--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -8,15 +8,15 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-weight: bold;
+  // font-weight: bold;
   border-radius: 2px;
 
   .picks-header {
     padding-left: 19px;
     width: 100%;
     font-size: 25px;
-    font-weight: bold;
     padding-bottom: 10px;
+    font-weight: bold;
     
     display: flex;
     justify-content: space-between;
@@ -71,11 +71,13 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     background: $lt-primary;
     color: white;
+    font-size: 20px;
+    font-weight: bold;
 
     div {
       width: 95px;
       text-align: center;
-      font-weight: bold;
+      // font-weight: bold;
     }
 
     div:first-child {
