--- a/app/assets/stylesheets/components/picks/pick_form.scss
+++ b/app/assets/stylesheets/components/picks/pick_form.scss
@@ -18,13 +18,14 @@
       display: flex;
       cursor: pointer;
       transition: .3s;
+      // font-weight: bold;
+      font-size: 20px;
 
       .pick-button {
         height: 88px;
         position: relative;
         display: inline-block;
         border-radius: 10px;
-        // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
         transition: all 0.3s ease-in-out;
         cursor: pointer;
       }
@@ -61,6 +62,9 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        div:first-child {
+          font-weight: bold;
+        }
       }
     }
 
@@ -87,10 +91,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      font-size: 20px;
     }
 
     .selection-form-time {
-      font-size: 17px;
+      font-size: 20px;
       display: flex;
       flex-direction: column;
 
@@ -103,13 +108,13 @@
 
       .time-props {
         padding-left: 3px;  
-        font-size: 8px;
+        font-size: 10px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
         div {
-          line-height: 8px;
+          line-height: 10px;
         }
       }
     }
