--- a/app/assets/stylesheets/components/picks/pick_form.scss
+++ b/app/assets/stylesheets/components/picks/pick_form.scss
@@ -1,5 +1,8 @@
 .picks-selections {
     width: 100%;
+    // position: absolute;
+    // top: 125px;
+    // padding-bottom: 20px;
 
   .selection-item {
     margin-bottom: 10px;
