game item styles

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -27,6 +27,7 @@
 @import 'components/picks/_.scss';
 @import 'components/pool/_.scss';
 @import 'components/splash/_.scss';
+@import 'components/console/_.scss';
 /******************************/
 
 html {
