--- a/app/assets/stylesheets/components/console/game_item.scss
+++ b/app/assets/stylesheets/components/console/game_item.scss
@@ -2,8 +2,6 @@
   width: 100%;
   display: flex;
   flex-direction: row;
+  font-size: 20px;
 
-  .game-item-data {
-    // flex-direction: row !important;
-  }
 }
