--- a/app/assets/stylesheets/components/console/_.scss
+++ b/app/assets/stylesheets/components/console/_.scss
@@ -1,7 +1,68 @@
 @import 'game_item.scss';
 
-.console {
-  width: 870px;
+.console-container {
   display: flex;
   flex-direction: column;
+  font-size: 20px;
+
+  .game-list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .console-header {
+    padding-left: 15px;
+    font-weight: bold;
+    font-size: 25px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+
+    i {
+      transition: .1s;
+      cursor: pointer;
+    }
+
+    i:hover {
+      opacity: .5;
+    }
+
+    .fa-caret-left {
+      padding-right: 5px;
+      position: absolute;
+      left: 0px;
+      bottom: 7px;
+    }
+
+    .fa-caret-right {
+      padding-left: 5px;
+    }
+
+    button {
+      font-size: 20px;
+      background: $drk-primary;
+      color: white;
+      padding: 5px 10px;
+    }
+
+    button:hover {
+      background: white;
+      color: black;
+      border: .5px $drk-primary solid;
+    }
+  }
+
+  .console-labels {
+    display: flex;
+    flex-direction: row;
+    font-weight: bold;
+    padding: 10px 0px;
+    margin: 10px 0px;
+    color: white;
+    background: $drk-primary;
+    div {
+      width: 125px;
+      text-align: center;
+    }
+  }
 }
