--- a/app/assets/stylesheets/components/console/game_item.scss
+++ b/app/assets/stylesheets/components/console/game_item.scss
@@ -1,7 +1,21 @@
 .game-item {
-  width: 100%;
   display: flex;
   flex-direction: row;
-  font-size: 20px;
+  cursor: pointer;
 
+  div {
+    width: 125px;
+    text-align: center;
+  }
+  div:first-child {
+    font-weight: bold;
+  }
+  div:nth-child(3) {
+    font-weight: bold;
+  }
+}
+
+.game-item:hover {
+  background: $drk-primary;
+  color: white;
 }
