fetch games button

--- a/app/assets/stylesheets/components/console/_.scss
+++ b/app/assets/stylesheets/components/console/_.scss
@@ -42,7 +42,8 @@
       font-size: 20px;
       background: $drk-primary;
       color: white;
-      padding: 5px 10px;
+      padding: 0px 10px;
+      height: 37px;
     }
 
     button:hover {
