--- a/app/assets/stylesheets/components/picks/pick_form.scss
+++ b/app/assets/stylesheets/components/picks/pick_form.scss
@@ -1,8 +1,5 @@
 .picks-selections {
     width: 100%;
-    // position: absolute;
-    // top: 125px;
-    // padding-bottom: 20px;
 
   .selection-item {
     margin-bottom: 10px;
@@ -18,18 +15,17 @@
     label {
       height: 90px;
       width: 250px;
-      border-radius: 10px;
+      border-radius: 5px;
       display: flex;
       cursor: pointer;
-      transition: .3s;
-      // font-weight: bold;
+      transition: .3s ease-in-out;
       font-size: 20px;
+      overflow: hidden;
 
       .pick-button {
         height: 88px;
         position: relative;
         display: inline-block;
-        border-radius: 10px;
         transition: all 0.3s ease-in-out;
         cursor: pointer;
       }
@@ -37,11 +33,13 @@
       .pick-home-button {
         border-top-right-radius: 0px;
         border-bottom-right-radius: 0px;
+        border-radius: 0px;
       }
 
       .pick-away-button {
         border-top-left-radius: 0px;
         border-bottom-left-radius: 0px;
+        border-radius: 0px;
       }
 
       .pick-button::after {
@@ -51,7 +49,6 @@
         width: 100%;
         height: 100%;
         opacity: 0;
-        border-radius: 5px;
         transition: opacity 0.3s ease-in-out;
       }
 
@@ -79,7 +76,7 @@
 
     label:hover {
       .pick-button {
-        transform: scale(1.05,1.05);
+        transform: scale(1.15,1.15);
       }
       background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
       color: $drk-primary;
@@ -124,7 +121,7 @@
     }
   }
 
-  .selected-button {
+  .selected-button, .correct-pick-button, .incorrect-pick-button {
     background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
     color: $drk-primary;
     border: .5px $drk-primary solid;
@@ -132,19 +129,15 @@
     border-left: none;
   }
 
+  .selected-button {
+    color: $drk-primary;
+  }
+
   .correct-pick-button {
-    background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
     color: #476C9B;
-    border: .5px $drk-primary solid;
-    border-right: none;
-    border-left: none;
   }
 
   .incorrect-pick-button {
-    background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
-    border: .5px $drk-primary solid;
     color: #A71D31;
-    border-right: none;
-    border-left: none;
   }
 }
