--- a/app/assets/stylesheets/components/picks/pick_form.scss
+++ b/app/assets/stylesheets/components/picks/pick_form.scss
@@ -7,7 +7,6 @@
     flex-direction: row;
     justify-content: space-between;
     flex: 0 0 auto;
-    // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     background: $lt-primary;
     color: white;
@@ -30,15 +29,7 @@
         cursor: pointer;
       }
 
-      .pick-home-button {
-        border-top-right-radius: 0px;
-        border-bottom-right-radius: 0px;
-        border-radius: 0px;
-      }
-
-      .pick-away-button {
-        border-top-left-radius: 0px;
-        border-bottom-left-radius: 0px;
+      .pick-home-button, .pick-away-button{
         border-radius: 0px;
       }
 
