remove unused images, create logos sprites

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,7 @@
 @import 'base/color.scss';
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
+@import 'components/logos.scss';
 @import 'components/common/_.scss';
 @import 'components/footer/_.scss';
 @import 'components/home/_.scss';
