update logos class names

--- a/app/assets/stylesheets/components/logos.scss
+++ b/app/assets/stylesheets/components/logos.scss
@@ -1,190 +1,190 @@
-.bg-49ers {
+.logo-49ers {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -110px -10px;
 }
 
-.bg-Bears {
+.logo-Bears {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -110px -340px;
 }
 
-.bg-Bengals {
+.logo-Bengals {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -210px -10px;
 }
 
-.bg-Bills {
+.logo-Bills {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -10px -120px;
 }
 
-.bg-Broncos {
+.logo-Broncos {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -110px -120px;
 }
 
-.bg-Browns {
+.logo-Browns {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -210px -120px;
 }
 
-.bg-Buccaneers {
+.logo-Buccaneers {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -310px -10px;
 }
 
-.bg-Cardinals {
+.logo-Cardinals {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -310px -120px;
 }
 
-.bg-Chargers {
+.logo-Chargers {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -10px -230px;
 }
 
-.bg-Chiefs {
+.logo-Chiefs {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -110px -230px;
 }
 
-.bg-Colts {
+.logo-Colts {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -210px -230px;
 }
 
-.bg-Cowboys {
+.logo-Cowboys {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -310px -230px;
 }
 
-.bg-Dolphins {
+.logo-Dolphins {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -410px -10px;
 }
 
-.bg-Eagles {
+.logo-Eagles {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -410px -120px;
 }
 
-.bg-Falcons {
+.logo-Falcons {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -410px -230px;
 }
 
-.bg-Giants {
+.logo-Giants {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -10px -340px;
 }
 
-.bg-Jaguars {
+.logo-Jaguars {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -10px -10px;
 }
 
-.bg-Jets {
+.logo-Jets {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -210px -340px;
 }
 
-.bg-Lions {
+.logo-Lions {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -310px -340px;
 }
 
-.bg-Packers {
+.logo-Packers {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -410px -340px;
 }
 
-.bg-Panthers {
+.logo-Panthers {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -510px -10px;
 }
 
-.bg-Patriots {
+.logo-Patriots {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -510px -120px;
 }
 
-.bg-Raiders {
+.logo-Raiders {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -510px -230px;
 }
 
-.bg-Rams {
+.logo-Rams {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -510px -340px;
 }
 
-.bg-Ravens {
+.logo-Ravens {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -10px -450px;
 }
 
-.bg-Redskins {
+.logo-Redskins {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -110px -450px;
 }
 
-.bg-Saints {
+.logo-Saints {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -210px -450px;
 }
 
-.bg-Seahawks {
+.logo-Seahawks {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -310px -450px;
 }
 
-.bg-Steelers {
+.logo-Steelers {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -410px -450px;
 }
 
-.bg-Texans {
+.logo-Texans {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -510px -450px;
 }
 
-.bg-Titans {
+.logo-Titans {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -610px -10px;
 }
 
-.bg-Vikings {
+.logo-Vikings {
   width: 80px;
   height: 90px;
   background: url('logo_sprites.png') -610px -120px;
