change splash page to use sprites

--- a/app/assets/stylesheets/components/splash/_.scss
+++ b/app/assets/stylesheets/components/splash/_.scss
@@ -57,19 +57,12 @@
     justify-content: center;
     align-items: center;
 
-    img {
+    div[class^='logo-'] {
       margin: 0px 10px;
-      height: 88px;
+      height: 90px;
       width: 80px;
       border: none;
-      // width: 90px;
-      // height: 90px;
-      // border-radius: 25%;
-    }
-
-    .shield {
-      // background: white;
-      // border: 5px $off-white solid;
+      border-radius: 25%;
     }
   }
 }
