--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -48,19 +48,16 @@
     }
     .auth-form-button {
       height: 30px;
-      // width: 90px;
+      width: 90px;
       font-size: 15px;
       display: flex;
       justify-content: center;
       align-items: center;
       border-radius: 3px;
       box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-      // background: -webkit-gradient(linear, center bottom, center top, from(#F0EDE9), to(#FEFEFE));
-      background: black;
+      background: $drk-primary;
       transition: .2s;
       color: white;
-      padding: 0 10px;
-      box-sizing: border-box;
     }
     .auth-form-button:hover {
       color: $lt-primary;
