standing box widths

--- a/app/assets/stylesheets/components/common/pool_standings_box.scss
+++ b/app/assets/stylesheets/components/common/pool_standings_box.scss
@@ -30,8 +30,8 @@ $off-white: #e9ebee;
   }
 
   .title {
-    height: 20px;
-    width: 175px;
+    // height: 20px;
+    width: 200px;
     text-overflow: ellipsis !important;
   }
 
@@ -49,7 +49,7 @@ $off-white: #e9ebee;
   font-size: 15px;
 
   .title{
-    width: 175px;
+    width: 200px;
   }
 
   .score, .losses {
