--- a/app/assets/stylesheets/components/common/pool_standings_box.scss
+++ b/app/assets/stylesheets/components/common/pool_standings_box.scss
@@ -1,8 +1,9 @@
 $off-white: #e9ebee;
 
 .pool-standings-box {
-  padding-top: 20px;
   position: relative;
+  padding: 0px 5px;
+  padding-top: 20px;
 
   .pool-standings-box-title {
     position: absolute;
