--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -63,6 +63,7 @@ $white: #F6F7F9;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    flex-wrap: wrap;
     overflow-y: overlay;
     padding-left: 5px;
 
