gameform input field error message removed

--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -62,7 +62,7 @@ $white: #F6F7F9;
     height: 145px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-between;
     flex-wrap: wrap;
     overflow-y: overlay;
     padding-left: 5px;
