--- a/app/assets/stylesheets/components/metrics/_.scss
+++ b/app/assets/stylesheets/components/metrics/_.scss
@@ -1,3 +1,33 @@
 .metrics-container {
-  
+  width: 870px;
+  padding: 20px 0px;  
+  display: flex;
+  flex-direction: column;
+  .metrics-header {
+    width: 100%;
+    padding-bottom: 5px;
+    display: flex;
+    justify-content: space-around;
+    font-size: 20px;
+    font-weight: bold;
+    div {
+      width: 140px;
+      text-align: center;
+    }
+  }
+  .team-item {
+    width: 870px;
+    margin: 5px 0px;
+    padding: 5px 0px;
+    display: flex;
+    justify-content: space-around;
+    border-top: .2px rgba(51, 51, 51,.2) solid;
+    div {
+      width: 140px;
+      text-align: center;
+    }
+    div:first-child {
+      font-weight: bold;
+    }
+  }
 }
