--- a/app/assets/stylesheets/components/metrics/_.scss
+++ b/app/assets/stylesheets/components/metrics/_.scss
@@ -1,29 +1,47 @@
 .metrics-container {
   width: 870px;
-  padding: 20px 0px;  
+  padding-bottom: 20px;
+  padding-top: 57px;
   display: flex;
   flex-direction: column;
   .metrics-header {
-    width: 100%;
-    padding-bottom: 5px;
+    width: 870px;
+    position: fixed;
+    top: 60px;
+    z-index: 50;
+    overflow: hidden;
     display: flex;
-    justify-content: space-around;
-    font-size: 20px;
-    font-weight: bold;
-    div {
-      width: 140px;
-      text-align: center;
+    flex-direction: column;
+    .blocker {
+      background: white;
+      overflow: hidden;
+      height: 20px;
+      width: 100%;
+    }
+    .labels {
+      display: flex;
+      justify-content: space-around;
+      padding: 5px 0px;
+      border-radius: 2px;
+      font-size: 20px;
+      font-weight: bold;
+      background: $drk-primary;
+      color: white;
+      div {
+        width: 140px;
+        text-align: center;
+      }
     }
   }
   .team-item {
     width: 870px;
-    margin: 5px 0px;
     padding: 5px 0px;
     display: flex;
     justify-content: space-around;
     border-top: .2px rgba(51, 51, 51,.2) solid;
     div {
       width: 140px;
+      font-size: 15px;
       text-align: center;
     }
     div:first-child {
