pickform shows your record

--- a/app/assets/stylesheets/components/pool/chat_box.scss
+++ b/app/assets/stylesheets/components/pool/chat_box.scss
@@ -117,4 +117,10 @@
       background: white;
     }
   }
+  
+  .chat-load-more-button {
+    margin-left: 53px;
+    text-decoration: underline;
+    opacity: .5;
+  }
 }
