paid status dynamic coloring

--- a/app/assets/stylesheets/base/color.scss
+++ b/app/assets/stylesheets/base/color.scss
@@ -3,3 +3,11 @@ $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
+
+.red {
+  color: red;
+}
+
+.green {
+  color: green;
+}
