--- a/app/assets/stylesheets/components/moderator/_.scss
+++ b/app/assets/stylesheets/components/moderator/_.scss
@@ -68,7 +68,7 @@
       color: red;
     }
     .fa-usd {
-      color: green;
+      // color: green;
     }
     .pool-member {
       padding-top: 5px;
