payment banner now appears for moderator

--- a/app/assets/stylesheets/base/color.scss
+++ b/app/assets/stylesheets/base/color.scss
@@ -3,9 +3,10 @@ $lt-primary: #2d2d2d;
 $drk-text: #CDCDCD;
 $off-white: #e9ebee;
 $white: #F6F7F9;
+$best-red: #A71D31;
 
 .red {
-  color: red;
+  color: #A71D31;
 }
 
 .green {
