--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -1,6 +1,16 @@
 @import "chat_box";
 @import "mod_board";
 
+.pool-alert {
+  width: 100%;
+  padding: 10px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: $best-red;
+  color: white;
+}
+
 .pool-container {
   height: 100%;
   width: 100%;
