fixed pick form floating for playoffs

--- a/app/assets/stylesheets/components/picks/pick_form.scss
+++ b/app/assets/stylesheets/components/picks/pick_form.scss
@@ -1,7 +1,11 @@
-.picks-selections {
-    width: 100%;
+// .picks-selections {
+//     width: 100%;
+//     display: flex;
+//     flex-direction: column;
+//     margin-bottom: auto;
 
   .selection-item {
+    width: 100%;
     margin-bottom: 10px;
     display: flex;
     flex-direction: row;
@@ -135,4 +139,4 @@
   .incorrect-pick-button {
     color: #A71D31;
   }
-}
+// }
