--- a/app/assets/stylesheets/components/picks/_.scss
+++ b/app/assets/stylesheets/components/picks/_.scss
@@ -2,6 +2,7 @@
 @import 'loading_form.scss';
 
 .picks-container {
+  min-height: 900px;
   min-width: 870px;
   width: 95%;
   padding-bottom: 20px;
@@ -9,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   border-radius: 2px;
   position: relative;
   overflow: hidden;
