--- a/app/assets/stylesheets/components/common/button.scss
+++ b/app/assets/stylesheets/components/common/button.scss
@@ -1,4 +1,7 @@
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 3px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   background: $drk-primary;
