--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -23,6 +23,7 @@
       padding-left: 5px;
       display: flex;
       justify-content: space-between;
+      position: relative;
     }
     .utility-row {
       font-size: 12px;
@@ -48,8 +49,9 @@
     }
     .auth-form-button {
       height: 30px;
-      width: 90px;
+      // width: 90px;
       font-size: 15px;
+      padding: 0 5px;
     }
   }
 }
