--- a/app/assets/stylesheets/components/common/button.scss
+++ b/app/assets/stylesheets/components/common/button.scss
@@ -4,15 +4,20 @@
   align-items: center;
   border-radius: 3px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  background: $drk-primary;
+  // background: $drk-primary;
+  background: white;
   transition: .2s;
-  color: white;
+  // color: white;
+  color: $drk-primary;
   cursor: pointer;
+  border: 1px $drk-primary solid;
 
   &:hover {
-    color: $lt-primary;
-    background: white;
-    border: 1px black solid;
+    // color: $lt-primary;
+    // background: white;
+    color: white;
+    background: $drk-primary;
+    border: none;
   }
 
   &:disabled {
