--- a/app/assets/stylesheets/components/navbar/_.scss
+++ b/app/assets/stylesheets/components/navbar/_.scss
@@ -22,10 +22,17 @@ $transition-time: 0.1s;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    font-size: 20px;
-    font-weight: bold;
+    // font-size: 20px;
+    // font-weight: bold;
     cursor: pointer;
     transition: $transition-time;
+    // font-family: 'Roboto', sans-serif;
+
+    font-size: 20px;
+    // font-family: 'Roboto', sans-serif;
+    // text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 500;
 
     &:hover {
       color: #A71D31;
@@ -55,10 +62,10 @@ $transition-time: 0.1s;
 
   .account-button, .info-button {
     span {
-      font-size: 20px;
-      font-family: 'Roboto', sans-serif;
+      font-size: 17.5px;
+      // font-family: 'Roboto', sans-serif;
       text-transform: uppercase;
-      letter-spacing: 2px;
+      // letter-spacing: 2px;
       font-weight: 500;
     }
   }
