empty pool list message

--- a/app/assets/stylesheets/components/home/pool_list.scss
+++ b/app/assets/stylesheets/components/home/pool_list.scss
@@ -44,6 +44,7 @@
     font-size: 25px;
     opacity: .5;
     height: 210px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
