--- a/app/assets/stylesheets/components/common/authform.scss
+++ b/app/assets/stylesheets/components/common/authform.scss
@@ -49,9 +49,8 @@
     }
     .auth-form-button {
       height: 30px;
-      // width: 90px;
+      width: 90px;
       font-size: 15px;
-      padding: 0 5px;
     }
   }
 }
