skeletor border radius

--- a/app/assets/stylesheets/components/picks/loading_form.scss
+++ b/app/assets/stylesheets/components/picks/loading_form.scss
@@ -7,6 +7,7 @@
 	-webkit-animation: GradientSlide 1s ease infinite;
 	-moz-animation: GradientSlide 1s ease infinite;
 	animation: OpacityShift 1s ease infinite;
+	border-radius: 5px;
 	
 	@-webkit-keyframes GradientSlide {
 		0% {
