--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -31,7 +31,8 @@
 
 .pool-standings {
   width: 870px;
-  // min-height: 374px;
+  min-height: 374px;
+  // height: 278px;
   padding: 20px 10px;
   display: flex;
   flex-direction: row;
