announcement modboard overhaul

--- a/app/assets/stylesheets/components/home/_.scss
+++ b/app/assets/stylesheets/components/home/_.scss
@@ -2,6 +2,7 @@
 @import "create_pool_form";
 @import "join_pool_form";
 @import "confirm_form";
+@import "mod_board";
 
 .home-container {
   height: 100%;
