--- a/app/assets/stylesheets/components/home/mod_board.scss
+++ b/app/assets/stylesheets/components/home/mod_board.scss
@@ -2,7 +2,7 @@
   height: 287px;
   width: 870px;
   padding: 0px 5px;
-  padding-top: 30px;
+  // padding-top: 30px;
   position: relative;
   background: $lt-primary;
   color: white;
@@ -17,16 +17,25 @@
     font-weight: bold;
   }
 
-  .modboard-container-container {
-    padding: 5px;
-    overflow-y: hidden;
-  }
+  // .modboard-container-container {
+  //   padding: 5px;
+  //   overflow-y: hidden;
+  // }
 
   .modboard-container {
-    // height: 150px;
-    // height: 100%;
     width: 100%;
+    height: 287px;
+    padding: 20px 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    // align-items: center;
     overflow-y: hidden;
+
+    .welcome {
+      font-size: 20px;
+      font-weight: bold;
+    }
 
     .modboard-item {
       margin-bottom: 10px;
@@ -41,7 +50,8 @@
       }
 
       .message {
-        font-size: 12px;
+        font-size: 15px;
+        font-weight: bold;
       }
     }
   }
