--- a/app/assets/stylesheets/components/home/mod_board.scss
+++ b/app/assets/stylesheets/components/home/mod_board.scss
@@ -2,7 +2,7 @@
   height: 287px;
   width: 870px;
   padding: 0px 5px;
-  // padding-top: 30px;
+  padding-top: 30px;
   position: relative;
   background: $lt-primary;
   color: white;
@@ -24,12 +24,11 @@
 
   .modboard-container {
     width: 100%;
-    height: 287px;
-    padding: 20px 5px;
+    height: 267px;
+    padding: 10px 0px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    // align-items: center;
+    justify-content: space-around;
     overflow-y: hidden;
 
     .welcome {
@@ -39,19 +38,20 @@
 
     .modboard-item {
       margin-bottom: 10px;
+      padding-left: 5px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
 
-      .author {
-        font-size: 15px;
+      .title {
+        font-size: 12.5px;
         font-weight: bold;
         margin-bottom: 5px;
       }
 
       .message {
         font-size: 15px;
-        font-weight: bold;
+        // font-weight: bold;
       }
     }
   }
