--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,7 @@
 @import 'components/pool/_.scss';
 @import 'components/splash/_.scss';
 @import 'components/console/_.scss';
+@import 'components/profile/_.scss';
 /******************************/
 
 html {
