week winners table component

--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -59,6 +59,10 @@
       margin-left: 0px;
     }
   }
+
+  .pool-standings-top, .pool-standings-bottom {
+    display: flex;
+  }
 }
 
 .pool-bulletin {
