--- a/app/assets/stylesheets/components/pool/bulletin_board.scss
+++ b/app/assets/stylesheets/components/pool/bulletin_board.scss
@@ -1,8 +1,8 @@
 .bulletin-box {
-  height: 287px;
+  // height: 287px;
   width: 870px;
   padding: 0px 5px;
-  padding-top: 30px;
+  padding-top: 40px;
   position: relative;
   background: $lt-primary;
   color: white;
@@ -24,7 +24,7 @@
 
   .bulletin-container {
     width: 100%;
-    height: 247px;
+    // height: 247px;
     // padding: 10px 0px;
     display: flex;
     flex-direction: column;
@@ -46,7 +46,7 @@
       .author {
         font-size: 12.5px;
         font-weight: bold;
-        // margin-bottom: 5px;
+        margin-bottom: 5px;
       }
 
       .message {
