--- a/app/assets/stylesheets/components/pool/_.scss
+++ b/app/assets/stylesheets/components/pool/_.scss
@@ -36,7 +36,7 @@
   padding: 20px 10px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: flex-start;
 
   .standings-box {
@@ -47,18 +47,18 @@
     }
   }
 
-  div:first-child {
-    margin-right: 15px;
-  }
+  // div:first-child {
+  //   margin-right: 15px;
+  // }
 
-  .standings-box {
-    div:first-child {
-      margin-right: 0px;
-    }
-    div:last-child {
-      margin-left: 0px;
-    }
-  }
+  // .standings-box {
+  //   div:first-child {
+  //     margin-right: 0px;
+  //   }
+  //   div:last-child {
+  //     margin-left: 0px;
+  //   }
+  // }
 
   .pool-standings-top, .pool-standings-bottom {
     display: flex;
